# cli-tools

./: README.md
.github/workflows/: python-app.yml  run_tests.yml
database/: Readme.md  dune-project  run.sh
database/lib/: dune  operations.ml
database/test/: dune  test_database.ml
diffFiles/: .gitignore  Readme.md  pyproject.toml  requirements.txt  run.sh
diffFiles/src/: diffFiles.py  diff_files.py
diffFiles/tests/: test_diffFiles.py  test_diff_files.py
diffFiles/tests/data/: file1  file2
hashFile/: Readme.md  run.sh
hashFile/src/: hashFile.py
hashFile/tests/: test_hashFile.py
watcher/: Readme.md  ci.sh  run.sh
watcher/src/: watcher.py
watcher/tests/: test_triggerOnChange.py
